# pear

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
pear/: __init__.py  inference.py  mbr.py
pear/commands/: __init__.py  main.py
pear/encoders/: __init__.py  base.py  xlmr.py  xlmr_xl.py
pear/models/: __init__.py  base.py  utils.py
pear/models/pairwise/: __init__.py  pairwise_metric.py
pear/modules/: __init__.py  feedforward.py
tests/: conftest.py  test_cli.py  test_encoders.py  test_models.py  test_public_api.py  test_regressions.py
tests/fixtures/: tokenizers-4.40.2.json
